# sisepuede

./: .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  LICENSE.md  README.md  __init__.py  define_strategy_ids.yaml  environment.yaml  environment_docker.yaml  environment_py.yaml  juliapkg.json  model_overview.md  models.config  project_metadata.json  pyproject.toml  requirements.txt  setup.py  sisepuede.config  sisepuede_config.yaml
_archive/: define_transformations_afolu.py  define_transformations_integrated.py  define_transformations_integrated_2.py  define_transformations_ippu.py  model_attributes_old.py  transformations_base_afolu.py  transformations_base_energy.py  transformations_base_general.py
cloud/: aws_manager.py
command_line/: sisepuede_cl.py
core/: analysis_id.py  attribute_table.py  configuration.py  information_table_properties.py  model_attributes.py  model_variable.py  support_classes.py  units_manager.py
data_management/: ingestion.py  iterative_database.py  lhs_design.py  ordered_direct_product_table.py  sampling_unit.py
geo/: geo_classes.py  regional_gridded_data.py
julia/: Manifest.toml  Project.toml  call_nemomod.jl  nemomod_work.ipynb  nemomod_work_1.8.2.ipynb  setup_runs.jl  support_functions.jl
legacy/: data_api.py  data_functions_mix_lndu_transitions_from_inferred_bounds.py  define_transformations_afolu.py  define_transformations_circular_economy.py  define_transformations_energy.py  define_transformations_integrated.py  define_transformations_integrated_2.py  define_transformations_ippu.py  setup_analysis.py  transformations_base_afolu.py  transformations_base_circular_economy.py  transformations_base_cross_sector.py  transformations_base_energy.py  transformations_base_general.py  (+1 more)
(+954 files in other folders)
